@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install prepare
+DEPEND=virtual/pkgconfig net-misc/curl >=dev-libs/jansson-2.6 ncurses? ( sys-libs/ncurses ) avalon? ( virtual/libusb:1 ) bflsc? ( virtual/libusb:1 ) bitforce? ( virtual/libusb:1 ) bitfury? ( virtual/libusb:1 ) cointerra? ( virtual/libusb:1 ) drillbit? ( virtual/libusb:1 ) hashfast? ( virtual/libusb:1 ) hashratio? ( virtual/libusb:1 ) icarus? ( virtual/libusb:1 ) klondike? ( virtual/libusb:1 ) modminer? ( virtual/libusb:1 ) spondoolies? ( virtual/libusb:1 ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool
+DESCRIPTION=Bitcoin CPU/GPU/FPGA/ASIC miner in C
+EAPI=5
+HOMEPAGE=http://bitcointalk.org/?topic=28402.msg357369 http://github.com/ckolivas/cgminer
+IUSE=doc examples udev hardened ncurses ants1 ants2 avalon avalon2 bab bitmine_A1 bflsc bitforce bitfury cointerra drillbit hashfast hashratio icarus klondike knc minion modminer spondoolies
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=GPL-3
+RDEPEND=net-misc/curl >=dev-libs/jansson-2.6 ncurses? ( sys-libs/ncurses ) avalon? ( virtual/libusb:1 ) bflsc? ( virtual/libusb:1 ) bitforce? ( virtual/libusb:1 ) bitfury? ( virtual/libusb:1 ) cointerra? ( virtual/libusb:1 ) drillbit? ( virtual/libusb:1 ) hashfast? ( virtual/libusb:1 ) hashratio? ( virtual/libusb:1 ) icarus? ( virtual/libusb:1 ) klondike? ( virtual/libusb:1 ) modminer? ( virtual/libusb:1 ) spondoolies? ( virtual/libusb:1 )
+REQUIRED_USE=|| ( ants1 ants2 avalon avalon2 bab bitmine_A1 bflsc bitforce bitfury cointerra drillbit hashfast hashratio icarus klondike knc minion modminer spondoolies )
+SLOT=0
+SRC_URI=http://ck.kolivas.org/apps/cgminer/cgminer-4.7.0.tar.bz2
+_eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
+_md5_=acd1248324367eff68372b5c0b50860b
