@@ -1,12 +1,34 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX cgminer-4.3.5-system-jansson.patch 1559 SHA256 e4148e28da15e6d89d73a822a8780e9110296a457dcad0813e9c4256a8da78d7 SHA512 d24f3697dbf86c47d43010384a38917129a5a0de8f2231ae7256916e7e4e55f4b21c1b3ff93640322cf145fb3272a96b7243e7c7b4401dc186f4bfdb62edb238 WHIRLPOOL 689f143c4acafc0fb3c40eec96a4a66eff544aee0808dcfeaa735217e2aa7780baa800ab65e0d15be670511302788452bf49a520e416a300907ab34069698ba3
 AUX cgminer-4.4.2-system-jansson.patch 1559 SHA256 5832fd34622ba0c376560fedef5780addf1bf5a990c7311fdac9f6ca97de83e9 SHA512 93f7e7a2d9c7b72269b5e18a8882f77cb4d4139254433407b698cf2a4320929a0989b27f7d8c36120e791d11f94f72e9a861aaf9f81c575abf6e68b083d0bf63 WHIRLPOOL 0bce1d927195d741c787e753bcff40bdf043b493a2cf7ab0532295030f6eb882c4f58a468bf3fc1387d6b58446ca257e916fca2c204aa64b8506c5a48d062b42
 DIST cgminer-4.2.3.tar.bz2 1552081 SHA256 096809038a589bdb4474f2dde90b66a16fc8bf0b40837e5750defbba86970b1b SHA512 fdbf4d732cdbcf47c109b1c0c6ccf4c93592262c7f33ba39dc9d5617276a5f7a5aa5ff7fb62cda1aa5d29a00994424920570ca1550bfbd757b96ae0a6053220a WHIRLPOOL f6469bd1d6624d6a18a9880bd50d4060a9220beba7c5fec2cab55e2e270298141fb66b9d480b727e5059b8032dcd6cb823a57e01c769dd2b5a1642a97ca7ab65
 DIST cgminer-4.3.5.tar.bz2 1594405 SHA256 aefaae59d661214cdb96229f5007ca2ac925aeda732480fbc9ee84653c90d247 SHA512 9152e37b259027763c1a60bf07d659d83ce7b5c2423368ee20e7ad909b5dbf1ba6069ee78774d43c3e9a3475a70e014abf362a0c3da2e5a9075eab9ba8bffb97 WHIRLPOOL 784f581f0244bab32fba12b826634500ba9941ce4b446ca92840de61ef9c9b18b92d1db3e2a277f671e226a03b37af55803f9dbe2161482550f2e86683e6e028
 DIST cgminer-4.4.2.tar.bz2 1510208 SHA256 5eb0f9325fabd7c5533b41339a9ed6eb0959fd1caf19147d3fd848c6f7697b4e SHA512 621808f7e30411be991f2ada3125b3b967e437b08731d8f50dead9befda38c763b9deb1a4a6acce216153a224a5eed0cf39b92613b600a335fe52961a4dbb048 WHIRLPOOL 89c20eefd0e287c3561409ab250b9221168f3d794b99d6f12f1e610b697c6e37e1640148365254e9789309bc24feb10fbcdc49c493eb0ad20e22f6680009be65
 DIST cgminer-4.5.0.tar.bz2 1518283 SHA256 ffe7eedbc447c079d6e7dfa850e53d79bfeeb3bf0f11a1ac9205bb4fd8a9686c SHA512 c998f69bc6cf7816fe03cedb600b17bc928e825aabc36080a2ac900a7ef79f74c4161e83902f094db3cb550ed551768823ca27bf88a09217661972d437010285 WHIRLPOOL 080f5c78d083d25e2075e722da094dadc446e9b5278d9df884d8a53d60fd604fa5cf39404d500304992e3899ee3bbc97bd5527da23ee909739048d89e2c77fde
+DIST cgminer-4.7.0.tar.bz2 1534316 SHA256 604c5e1998e8c7319b3d7b69297ce5d45d47eb0eba9be0c037138ef73cd3749b SHA512 3d2450cab3ad6c455814db4420ce464e06dc910fec0e0be38a626193fbf46e5211bc2f8f2f6bb14daea0aa82622031cc5f44db9aee414236f7ac74cd7d95e847 WHIRLPOOL dc2beab3cb2422371190ed505c615eab24a846301527f428b107ca54f3de69c27905c4c7d1f9ab20af0c9f531aab6059ec7bf8570b1eb2b9439ac77e74a31e48
 EBUILD cgminer-4.2.3.ebuild 2457 SHA256 120271b24487f97159366a2be2e6a66ff9a7e1636eb0d9b3e07e01f5afe7af7f SHA512 cf6f9625ba78229e041f4468eb9237ae7e51fcbe4d31d1deaf64eddb462c15b137bad8889ee513d5afd450980f1c503af56c1a2c6c269e01a963d3c561880e40 WHIRLPOOL 0933d7f764774937ff4bd830c3c4836ddf22dd4e84810192e310692f0d0e1d4d780098e4ce6d29aae34de739252d843091b87a25899b2e649e22673ee80c6269
 EBUILD cgminer-4.3.5.ebuild 2527 SHA256 8195661b6f1037efa4cc0c2fd3e062c9efa0d98ef8b730acefc0df5ef53568a0 SHA512 ab22b2bd84095734b2f6d2022874ac0df1160278d120767295cddcaea084c9b1eab35e5c67fe5a51f53f8c05cb4a310facb5eff9e549a88cb94a89c2b0e327b0 WHIRLPOOL 9a9657d952533f15ac2aacabb03d1287f371960186dc2c99e0b6a0e19394115defdc5d29e079fbe4a9e60e0c466fd8c0d11c41a34077ebe82f085c7e2c10789e
 EBUILD cgminer-4.4.2.ebuild 2534 SHA256 999ccaa754568542a8b0510e6e3d2114029904e8e320d8b37f753a37225ad068 SHA512 36249caf85657140d52890fca79bbee85bbd712e71771dc16744d46f24f0a709c6f652e7236d4d9e41cbea0de73c49489d2c1502263472b6a8d49c89b96298b8 WHIRLPOOL 3cec229c7ae33a9d86e781d0c6e3ecdf2dc997f2eca1e69b20fe63400ced2d54745097caa8d4588e365b1c6a45fe7e41458b5a28b7767bd26ba38abc256c4fbb
 EBUILD cgminer-4.5.0.ebuild 2605 SHA256 6c81aac748d1fcd817610c38666d84da2ab498c1a39dac5130beb779e20d52cc SHA512 fa7afccefc4505af8e53022f1c3a68b5d3ec40f2e75317101f08901a40e2be0166bae05e3579d9c4efcc0aa47e9ae8a27c1cfe8a0d9e8c0954d360c6b5c939bb WHIRLPOOL 38d35612e733bf3b9d1d147b64fdaa6360aa90676b2cfe363b945e4b3ae2484e69a12e7a9e256d8bbaf577e36fee319a5b26fde2d71fecf632f76c46f9772cb6
-MISC ChangeLog 13471 SHA256 0d3af52066809c059cdea8647745bdf905630551677a02d3cbdfcd37b60eae7c SHA512 42c111cfebde6e4c1f73ba3cce11fb9d7b1afcf24e5b70d0f422a9c4a1e0c7f99e76e79a6acc773f3bae3391c639c54d0fbb8222512090e9ecff04acf7c5af05 WHIRLPOOL 53bc1925bc4743e41e76c3b76df841dde0bef600a5e7a3be2fcf5d981f9f53738df95f79bd0d2b80edaf8d48cfdf6651c386c711658b1b5e147b638616a5de88
+EBUILD cgminer-4.7.0.ebuild 2605 SHA256 480059c55ec3e30bf05d22c4e779a78e9b954ee9ac3794a7343c9bce32254f93 SHA512 208be41c857621f42866f6f77d5c75f040713e3ecab07bff1e5ceb0169fa4642fbc07ac9d381eeb55069abf3d17e29c9262ee25b49ebc3eb8ae53d2b7b07bf03 WHIRLPOOL f62051cb70c59b4d86d31df7e116a9a8e295a4d3246b2a6f0c055f87f9f7f303c51f034257b4177b69f318f9cbd07589d0eb287f8f1570dd1960714dcd3c77ad
+MISC ChangeLog 13596 SHA256 0fa3ab2f67ab691e38cc876dd40e33f51aa741a5b66e9f718f46153df2de8089 SHA512 cff9ed5a3675e29a78f448e759e2a9a54b54806d9222f3dc1c22d0f779292e07621f7f0e2141c489d8b32e124f614fcd231394819c46d8cc362108bba02dee1f WHIRLPOOL b1799406ea8ec48245431368566a84edeb53b63e6d9d5677741f01a3776fe10004f2a9011b784b863a6f48bf0c81a2401e76ebd130bc41cb4d665d2af5632e10
 MISC metadata.xml 1777 SHA256 837281c953d61bac107dd8b0b399fb548404f01a8e7dd25ec183a74bad4b38de SHA512 c85397422fd01a3ddcb4ac93776b292fb30d49407bab30f320469188905711ecc4092199f54fdab468c924fd8e843f9aa80ebbf64a4946ad1aa9337d54e2470f WHIRLPOOL 104cb9d6b05c95ef49c4e38fd11b27fecdabf7721cea0a8bfca411ec9b71b22f369bc264a358dfe200dc6af0a133733b531a3c706569438f3546b53d92a7345d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQIcBAEBCAAGBQJUPwY7AAoJEJOE+m71LUu6X+EQAI4lYoZxJfygdwON2KM9BRP9
++4W78cDaE1zPRk1TJsiNV7FerHSpW5oahg6Zqw61hkngejDpzQK6I+BDFqqXAxX1
+E9W6+ObWoy4H2Mv0CcKyXghGn1VaIeiOKsNGNTNLxhP+RvnQFzRdS9cVwhhFAGDt
+wF48CBcA/TPuW2Zt22rVVKQpW6ZMMEJ2LgHxpYU2VKJJUmLnNno17ctw46GLo/FC
+onEbunNju4fTqOwCPRwYM6Ap4HoQxep1tqCY5A8YFiMU3UY1edpC5AJomsoiUiVI
+oTGwztk6Z9dHNcjMPk7t4KDLKQkejE1lx9eWdP5F2hUbQGN9wEy/CKmKxAetuzOW
+BCLPhWnAGj9qzzuSLOcY+8T1hzQRGbCOymE433ImxC4voeQ6Y/GnZ2qQ3acitZEx
+MpVkNvjOFSj8ZVd5zIJeV/rIyCq/AeWKSLc7/eleW56rA7fX8jv6GoQfW69iGNWl
+q6XND0bR/Ju6qCo7ZXcs3jsmwIbR5xq+VcZtdxVPzuU995qYEmeU0f+jr6hJlOfJ
+FAd6jXWYuYyGcz9S1nBQbfGGF2ZQ5dAriiPZ3r5GXflVsS4exsKJmEaym+qcvZxq
+E77N7NBu5X4tMZ2ggftMv7SWpkZ/52Pa32Hb/L1tHbnKLlBWJGCJI6YQLO5cor2Q
+P1f5hxCyZPUC76XYhzRU
+=XcEV
+-----END PGP SIGNATURE-----
