@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/cgminer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.80 2014/08/03 02:33:27 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.81 2014/10/15 23:40:37 blueness Exp $
+
+*cgminer-4.7.0 (15 Oct 2014)
+
+  15 Oct 2014; Anthony G. Basile <blueness@gentoo.org> +cgminer-4.7.0.ebuild:
+  Version bump
 
   03 Aug 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Remove unneeded useflag description from metadata.xml
